adição de rota para listar todos os clientes e swagger
