# webAPI/controllers/ControladoresCliente.js
@@ -40,7 +40,17 @@ const identificarCliente = async (req, res) => {
     }
 };
 
+const listarClientes = async (req, res) => {
+    try {
+        const clientes = await Cliente.listarTodos();
+        return res.status(200).json(clientes);
+    } catch (error) {
+        return res.status(500).json({ mensagem: "Erro ao listar clientes: " + error.message });
+    }
+};
+
 module.exports = {
     cadastrarCliente,
-    identificarCliente
+    identificarCliente,
+    listarClientes
 }
