# webAPI/routes/RotasProdutos.js
@@ -5,12 +5,12 @@ const rotasProdutos = express();
 
 
 //Criar autenticador para rotas de produto
-rotasProdutos.post('/novoproduto', usuarioAutenticado, adicionarProduto)
+rotasProdutos.post('/cadastrarproduto', usuarioAutenticado, adicionarProduto)
 
 rotasProdutos.patch('/editarproduto/:id', usuarioAutenticado, editarProduto)
 
 rotasProdutos.delete('/excluirproduto/:id', usuarioAutenticado, excluirProduto)
 
-rotasProdutos.get('/produtos/categoria/:categoria_id', listarProdutosCategoria)
+rotasProdutos.get('/categoria/:categoria_id', listarProdutosCategoria)
 
 module.exports = rotasProdutos
